deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mol
  labels:
    app.kubernetes.io/part-of: myownleague
